--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
+    "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "node-sass": "^4.14.1",
@@ -22,6 +23,7 @@
     "sass-loader": "^8.0.2",
     "speed-measure-webpack-plugin": "^1.3.3",
     "style-loader": "^1.2.1",
+    "url-loader": "^4.1.0",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-dashboard": "^3.2.0"
   }
