--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "serve": "webpack-dev-server",
+    "serve": "webpack-dev-server --mode development",
     "build": "webpack --mode production"
   },
   "dependencies": {
@@ -18,13 +18,13 @@
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "progress-bar-webpack-plugin": "^2.1.0",
     "sass-loader": "^8.0.2",
     "speed-measure-webpack-plugin": "^1.3.3",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-dashboard": "^3.2.0"
+    "webpack-bundle-analyzer": "^3.8.0"
   }
 }
